// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard Snapshot Tests should match snapshot 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 280,
      "marginHorizontal": 2,
      "opacity": 1,
      "paddingBottom": 20,
      "paddingHorizontal": 7,
      "width": 375,
    }
  }
  testID="movie-card"
>
  <View
    style={
      {
        "borderRadius": 10,
        "flex": 1,
        "position": "relative",
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://image.tmdb.org/t/p/w500/test.jpg",
        }
      }
      style={
        {
          "borderRadius": 15,
          "flex": 1,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.7)",
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "bottom": 0,
          "left": 0,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#fff",
            "fontSize": 18,
            "fontWeight": "600",
          }
        }
      >
        Test Movie
      </Text>
    </View>
  </View>
</View>
`;

exports[`MovieCard Snapshot Tests should match snapshot with different movie 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 280,
      "marginHorizontal": 2,
      "opacity": 1,
      "paddingBottom": 20,
      "paddingHorizontal": 7,
      "width": 375,
    }
  }
  testID="movie-card"
>
  <View
    style={
      {
        "borderRadius": 10,
        "flex": 1,
        "position": "relative",
      }
    }
  >
    <Image
      source={
        {
          "uri": "https://image.tmdb.org/t/p/w500/snapshot.jpg",
        }
      }
      style={
        {
          "borderRadius": 15,
          "flex": 1,
        }
      }
    />
    <View
      style={
        {
          "backgroundColor": "rgba(0, 0, 0, 0.7)",
          "borderBottomLeftRadius": 15,
          "borderBottomRightRadius": 15,
          "bottom": 0,
          "left": 0,
          "paddingHorizontal": 12,
          "paddingVertical": 8,
          "position": "absolute",
          "right": 0,
        }
      }
    >
      <Text
        numberOfLines={2}
        style={
          {
            "color": "#fff",
            "fontSize": 18,
            "fontWeight": "600",
          }
        }
      >
        Snapshot Movie
      </Text>
    </View>
  </View>
</View>
`;
